--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,47 @@
-# Prerequisites
-*.d
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# Our automatic versioning scheme generates the following file
+# NEVER put it in the repository
+_Version.h
 
-# Precompiled Headers
-*.gch
-*.pch
+#
+# OS
+#
+applet/
+*.DS_Store
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
 
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+#
+# Misc
+#
+*~
+*.orig
+*.rej
+*.bak
+*.idea
+*.s
+*.i
+*.ii
+*.swp
+tags
 
 # Executables
 *.exe
 *.out
 *.app
+*.i*86
+*.x86_64
+*.hex
